syntax = "proto3";

package auth;

service AuthService {
  rpc Authenticate(AuthRequest) returns (AuthResponse) {};
  rpc Register(RegisterRequest) returns (RegisterResponse) {};
  rpc Login(LoginRequest) returns (LoginResponse) {};
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  Auth result = 1;
}

message Auth {
  string access_token = 1;
  string role = 2;
  string email = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  bool result = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool result = 1;
}
